syntax = "proto3";
package sonrhq.sonr.identity;

import "sonr/identity/did.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/sonr-hq/sonr/x/identity/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateDidDocument(MsgCreateDidDocument) returns (MsgCreateDidDocumentResponse);
  rpc UpdateDidDocument(MsgUpdateDidDocument) returns (MsgUpdateDidDocumentResponse);
  rpc DeleteDidDocument(MsgDeleteDidDocument) returns (MsgDeleteDidDocumentResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateDidDocument {
  string creator = 1;
  DidDocument document =2;
}
message MsgCreateDidDocumentResponse {}

message MsgUpdateDidDocument {
  string creator = 1;
  DidDocument document = 2;
}
message MsgUpdateDidDocumentResponse {
  string creator = 1;
}

message MsgDeleteDidDocument {
  string creator = 1;
  string did = 2;
}
message MsgDeleteDidDocumentResponse {}

// this line is used by starport scaffolding # proto/tx/message
